fix(test): try to fix the shifting of icon on mobile device #21

--- a/_sass/filter.scss
+++ b/_sass/filter.scss
@@ -156,6 +156,7 @@ button.clear-all-button:hover {
   color: white;
   font-weight: bold;
   font-size: 16px;
+  line-height: 1;
 }
 
 @media screen and (max-width: 480px) {
@@ -173,6 +174,9 @@ button.clear-all-button:hover {
 
 .checkmark::before {
   content: '✔';
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .crossmark {
@@ -181,4 +185,7 @@ button.clear-all-button:hover {
 
 .crossmark::before {
   content: '✖';
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
